speccy-cli/tests/snapshots/hardening__codex--_agents_skills_speccy-brainstorm_SKILL_md.snap
---
source: speccy-cli/tests/hardening.rs
expression: f.contents
---
---
name: speccy-brainstorm
description: Optional read-only exploration that inspects the repo, sketches options, rates scope, and returns a brainstorm handoff with a recommended route. It never drafts a spec or calls the controller.
---

# /speccy-brainstorm

Read-only. Makes **no** controller calls. Inspect the codebase, docs, and recent
patterns before asking. If the repo can answer a question, answer it by
inspection instead of asking the human.

Work one decision branch at a time:

- ask at most one clarifying question per message, only when it would change the
  route or design
- prefer concrete options, each with a recommended answer
- sketch 2-3 candidate approaches or routes with tradeoffs before settling
- flag oversized requests early and propose the first split worth specifying

Rate the request before recommending a route:

- size: tiny | small | medium | large | initiative
- **evidence-ability first** — can the result be validated? Low evidence-ability
  routes away from a Speccy spec even for large work.
- recommended route + a short reason.

End with a brainstorm handoff and one recommended route: direct edit, regular
harness planning (/plan), a Speccy spec (/speccy-plan), or
split into multiple specs. The handoff is ephemeral chat context; it is
persisted only if /speccy-plan promotes it.

The handoff should include: goal, important context found in the repo, candidate
approaches considered, recommended route, open questions with your recommended
answers, and any suggested split. Do not draft the Speccy spec here; /speccy-plan
owns the deeper spec-quality references and approval card.
