speccy-cli/tests/snapshots/hardening__codex--_agents_skills_speccy-implement_SKILL_md.snap
---
source: speccy-cli/tests/hardening.rs
expression: f.contents
---
---
name: speccy-implement
description: Run an approved spec revision to verified — controller-driven task, repair, and review rounds, then run-gate validation. Exits early if the revision is not approved.
---

# /speccy-implement

Runs against an approved spec revision (inferred when unambiguous). A fresh,
cleared session is recommended. Exits early unless the revision is `approved`.

1. `speccy ctl spec status --spec <ref> --json` — confirm `approved`.
2. `speccy ctl run start --spec <ref> --revision <rev> --json` — refuses
   a dirty worktree; creates the run branch and task graph.
3. Drive the loop. Repeat: call
   `speccy ctl run next --run <id> --agent codex:<session> --json`,
   perform the directive's `packet_with`, dispatch or act as directed, record the
   outcome through `record_with` with the returned `lease.token`, then call
   `run next` again.

   - `claim_task` -> `task claim`
   - `dispatch_worker` -> `packet task`; use **speccy-repair** when
     `round.current > 1` or the packet has `prior_findings`, otherwise
     **speccy-worker**; then `task record-handoff`
   - `dispatch_verifier` -> `packet verification`, dispatch **speccy-verifier**;
     it fans out the packet's `personas` and returns a status payload; record it
     with `requirement set-status`
   - `await_human_gate` -> stop and surface the gate's packet
   - `halt`, an unknown action, or any controller error -> stop and surface it (fail closed)

If a dispatched subagent cannot return valid structured output — a malformed
handoff or status payload — retry it, up to the project's structured-output
retry cap. If it still cannot, call
`speccy ctl run interrupt --run <id> --lease <token> --input interrupt.json --json`
with `reason: structured_output_retries_exhausted`; the controller snapshots the
in-flight work and parks the run at the escalation gate for a human. Do not
count retries against repair rounds — that is the controller's job, not yours.

Read the returned state after every call; never infer the next step from
transcript memory — only `run next` decides sequencing, rounds, and gates. If a
`run next` response carries a `resume` block, echo it before dispatching.

The loop is fully autonomous: no step-by-step steering. It ends `verified` on
success or `escalated` on a spec/evidence/policy gap.
