speccy-cli/tests/snapshots/hardening__codex--_agents_skills_speccy-plan_SKILL_md.snap
---
source: speccy-cli/tests/hardening.rs
expression: f.contents
---
---
name: speccy-plan
description: Route-check an engineering request; only when it warrants Speccy, draft a spec and acceptance ledger and present a compact spec card for prose approval.
---

# /speccy-plan

Route-check first. Only on the `speccy_spec` route (or an explicit override) do
you create controller state.

## Route preflight (read-only)

Rate scope: tiny | small | medium | large | initiative. Ask first: **can this be
evidenced?** Low evidence-ability routes away even for large work.

- tiny / small -> direct edit
- medium -> regular harness planning (/plan)
- large -> Speccy spec (continue below)
- initiative -> split into multiple specs

Route-away responses create no spec, ledger, or run. "use Speccy anyway"
overrides.

## Draft a spec

1. `speccy ctl spec start --input request.json --json` — the verbatim
   request (and a promoted brainstorm handoff, if any).
2. `speccy ctl packet planning --spec <ref> --json` — a deterministic
   work order. Inspect the repo read-only; reconcile prior-context candidates
   against the current code (flag drift, don't carry stale requirements).
3. Read `references/spec-quality.md`, then draft ONE complete candidate revision
   and submit it with
   `speccy ctl spec record-draft --spec <ref> --input spec-draft.json --json`.
   Repair lint findings with focused `spec patch-draft` calls.
4. After controller lint is clean, run the semantic self-review in
   `references/spec-quality.md`. Patch any placeholders, contradictions,
   hidden scope, weak evidence, stale prior context, or code-answerable open
   questions before approval.
5. Read `references/spec-card-example.md`, then present a compact spec card:
   goal, in/out scope, plan, acceptance statements, the `kind: command` strings
   the controller will run, prior context carried forward, open questions with
   recommended answers, and main risks. Use request_user_input for a
   structured choice.

## Approval (the prose gate)

The human approves in prose. Before recording, echo exactly what you will record:

```
Recording approval: <ref> rev <revision> -> approved
```

Then `speccy ctl spec record-decision --spec <ref> --input decision.json --json`
(type `approve`). Approval is refused while the draft is lint-dirty.

- `go` — record approval, then start the run in this session (see /speccy-implement).
- `approve only` — record approval, print the /speccy-implement handoff.
- `revise:` / `split:` / `cancel` route the other decisions. Ambiguous approval
  prose defaults to `approve only`.
